sdk-docs_versioned_docs/version-24.2.x/modules/API/Procedures/Types/Types.md
---
id: 'Types'
title: 'Module: Procedures Types'
sidebar_label: 'Types'
---

## Enumerations

- [AllowanceOperation](../../../../enums/API/Procedures/Types/AllowanceOperation/AllowanceOperation.md)
- [ClaimOperation](../../../../enums/API/Procedures/Types/ClaimOperation/ClaimOperation.md)
- [InstructionAffirmationOperation](../../../../enums/API/Procedures/Types/InstructionAffirmationOperation/InstructionAffirmationOperation.md)
- [RoleType](../../../../enums/API/Procedures/Types/RoleType/RoleType.md)
- [TransferRestrictionType](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md)
- [TxGroup](../../../../enums/API/Procedures/Types/TxGroup/TxGroup.md)

## Interfaces

- [AcceptPrimaryKeyRotationParams](../../../../interfaces/API/Procedures/Types/AcceptPrimaryKeyRotationParams/AcceptPrimaryKeyRotationParams.md)
- [AddAssetRequirementParams](../../../../interfaces/API/Procedures/Types/AddAssetRequirementParams/AddAssetRequirementParams.md)
- [AddClaimsParams](../../../../interfaces/API/Procedures/Types/AddClaimsParams/AddClaimsParams.md)
- [AddInstructionsParams](../../../../interfaces/API/Procedures/Types/AddInstructionsParams/AddInstructionsParams.md)
- [AddInvestorUniquenessClaimParams](../../../../interfaces/API/Procedures/Types/AddInvestorUniquenessClaimParams/AddInvestorUniquenessClaimParams.md)
- [AssetBase](../../../../interfaces/API/Procedures/Types/AssetBase/AssetBase.md)
- [AssetMediatorParams](../../../../interfaces/API/Procedures/Types/AssetMediatorParams/AssetMediatorParams.md)
- [AttestPrimaryKeyRotationParams](../../../../interfaces/API/Procedures/Types/AttestPrimaryKeyRotationParams/AttestPrimaryKeyRotationParams.md)
- [CddProviderRole](../../../../interfaces/API/Procedures/Types/CddProviderRole/CddProviderRole.md)
- [ClaimCountRestrictionValue](../../../../interfaces/API/Procedures/Types/ClaimCountRestrictionValue/ClaimCountRestrictionValue.md)
- [ClaimCountTransferRestrictionInput](../../../../interfaces/API/Procedures/Types/ClaimCountTransferRestrictionInput/ClaimCountTransferRestrictionInput.md)
- [ClaimPercentageRestrictionValue](../../../../interfaces/API/Procedures/Types/ClaimPercentageRestrictionValue/ClaimPercentageRestrictionValue.md)
- [ClaimPercentageTransferRestrictionInput](../../../../interfaces/API/Procedures/Types/ClaimPercentageTransferRestrictionInput/ClaimPercentageTransferRestrictionInput.md)
- [ConfigureDividendDistributionParams](../../../../interfaces/API/Procedures/Types/ConfigureDividendDistributionParams/ConfigureDividendDistributionParams.md)
- [ControllerTransferParams](../../../../interfaces/API/Procedures/Types/ControllerTransferParams/ControllerTransferParams.md)
- [CountTransferRestrictionInput](../../../../interfaces/API/Procedures/Types/CountTransferRestrictionInput/CountTransferRestrictionInput.md)
- [CreateAssetParams](../../../../interfaces/API/Procedures/Types/CreateAssetParams/CreateAssetParams.md)
- [CreateAssetWithTickerParams](../../../../interfaces/API/Procedures/Types/CreateAssetWithTickerParams/CreateAssetWithTickerParams.md)
- [CreateCheckpointScheduleParams](../../../../interfaces/API/Procedures/Types/CreateCheckpointScheduleParams/CreateCheckpointScheduleParams.md)
- [CreateChildIdentitiesParams](../../../../interfaces/API/Procedures/Types/CreateChildIdentitiesParams/CreateChildIdentitiesParams.md)
- [CreateChildIdentityParams](../../../../interfaces/API/Procedures/Types/CreateChildIdentityParams/CreateChildIdentityParams.md)
- [CreateGroupParams](../../../../interfaces/API/Procedures/Types/CreateGroupParams/CreateGroupParams.md)
- [CreateMultiSigParams](../../../../interfaces/API/Procedures/Types/CreateMultiSigParams/CreateMultiSigParams.md)
- [CreateNftCollectionParams](../../../../interfaces/API/Procedures/Types/CreateNftCollectionParams/CreateNftCollectionParams.md)
- [CreateTransactionBatchParams](../../../../interfaces/API/Procedures/Types/CreateTransactionBatchParams/CreateTransactionBatchParams.md)
- [CreateTransactionBatchProcedureMethod](../../../../interfaces/API/Procedures/Types/CreateTransactionBatchProcedureMethod/CreateTransactionBatchProcedureMethod.md)
- [CreateVenueParams](../../../../interfaces/API/Procedures/Types/CreateVenueParams/CreateVenueParams.md)
- [DecreaseAllowanceParams](../../../../interfaces/API/Procedures/Types/DecreaseAllowanceParams/DecreaseAllowanceParams.md)
- [EditClaimsParams](../../../../interfaces/API/Procedures/Types/EditClaimsParams/EditClaimsParams.md)
- [ExecuteManualInstructionParams](../../../../interfaces/API/Procedures/Types/ExecuteManualInstructionParams/ExecuteManualInstructionParams.md)
- [GlobalCollectionKeyInput](../../../../interfaces/API/Procedures/Types/GlobalCollectionKeyInput/GlobalCollectionKeyInput.md)
- [IdentityRole](../../../../interfaces/API/Procedures/Types/IdentityRole/IdentityRole.md)
- [ImmortalProcedureOptValue](../../../../interfaces/API/Procedures/Types/ImmortalProcedureOptValue/ImmortalProcedureOptValue.md)
- [IncreaseAllowanceParams](../../../../interfaces/API/Procedures/Types/IncreaseAllowanceParams/IncreaseAllowanceParams.md)
- [InstructionFungibleLeg](../../../../interfaces/API/Procedures/Types/InstructionFungibleLeg/InstructionFungibleLeg.md)
- [InstructionIdParams](../../../../interfaces/API/Procedures/Types/InstructionIdParams/InstructionIdParams.md)
- [InstructionNftLeg](../../../../interfaces/API/Procedures/Types/InstructionNftLeg/InstructionNftLeg.md)
- [InvestInOfferingParams](../../../../interfaces/API/Procedures/Types/InvestInOfferingParams/InvestInOfferingParams.md)
- [InviteAccountParams](../../../../interfaces/API/Procedures/Types/InviteAccountParams/InviteAccountParams.md)
- [InviteExternalAgentParams](../../../../interfaces/API/Procedures/Types/InviteExternalAgentParams/InviteExternalAgentParams.md)
- [LaunchOfferingParams](../../../../interfaces/API/Procedures/Types/LaunchOfferingParams/LaunchOfferingParams.md)
- [LinkCaDocsParams](../../../../interfaces/API/Procedures/Types/LinkCaDocsParams/LinkCaDocsParams.md)
- [LocalCollectionKeyInput](../../../../interfaces/API/Procedures/Types/LocalCollectionKeyInput/LocalCollectionKeyInput.md)
- [ModifyAssetTrustedClaimIssuersAddSetParams](../../../../interfaces/API/Procedures/Types/ModifyAssetTrustedClaimIssuersAddSetParams/ModifyAssetTrustedClaimIssuersAddSetParams.md)
- [ModifyAssetTrustedClaimIssuersRemoveParams](../../../../interfaces/API/Procedures/Types/ModifyAssetTrustedClaimIssuersRemoveParams/ModifyAssetTrustedClaimIssuersRemoveParams.md)
- [ModifyCaCheckpointParams](../../../../interfaces/API/Procedures/Types/ModifyCaCheckpointParams/ModifyCaCheckpointParams.md)
- [ModifyCorporateActionsAgentParams](../../../../interfaces/API/Procedures/Types/ModifyCorporateActionsAgentParams/ModifyCorporateActionsAgentParams.md)
- [ModifyMultiSigParams](../../../../interfaces/API/Procedures/Types/ModifyMultiSigParams/ModifyMultiSigParams.md)
- [ModifyPrimaryIssuanceAgentParams](../../../../interfaces/API/Procedures/Types/ModifyPrimaryIssuanceAgentParams/ModifyPrimaryIssuanceAgentParams.md)
- [ModifySignerPermissionsParams](../../../../interfaces/API/Procedures/Types/ModifySignerPermissionsParams/ModifySignerPermissionsParams.md)
- [MortalProcedureOptValue](../../../../interfaces/API/Procedures/Types/MortalProcedureOptValue/MortalProcedureOptValue.md)
- [MoveFundsParams](../../../../interfaces/API/Procedures/Types/MoveFundsParams/MoveFundsParams.md)
- [NftControllerTransferParams](../../../../interfaces/API/Procedures/Types/NftControllerTransferParams/NftControllerTransferParams.md)
- [NoArgsProcedureMethod](../../../../interfaces/API/Procedures/Types/NoArgsProcedureMethod/NoArgsProcedureMethod.md)
- [OptionalArgsProcedureMethod](../../../../interfaces/API/Procedures/Types/OptionalArgsProcedureMethod/OptionalArgsProcedureMethod.md)
- [PayDividendsParams](../../../../interfaces/API/Procedures/Types/PayDividendsParams/PayDividendsParams.md)
- [PercentageTransferRestrictionInput](../../../../interfaces/API/Procedures/Types/PercentageTransferRestrictionInput/PercentageTransferRestrictionInput.md)
- [PortfolioCustodianRole](../../../../interfaces/API/Procedures/Types/PortfolioCustodianRole/PortfolioCustodianRole.md)
- [PortfolioId](../../../../interfaces/API/Procedures/Types/PortfolioId/PortfolioId.md)
- [ProcedureAuthorizationStatus](../../../../interfaces/API/Procedures/Types/ProcedureAuthorizationStatus/ProcedureAuthorizationStatus.md)
- [ProcedureMethod](../../../../interfaces/API/Procedures/Types/ProcedureMethod/ProcedureMethod.md)
- [ProcedureOpts](../../../../interfaces/API/Procedures/Types/ProcedureOpts/ProcedureOpts.md)
- [RedeemNftParams](../../../../interfaces/API/Procedures/Types/RedeemNftParams/RedeemNftParams.md)
- [RedeemTokensParams](../../../../interfaces/API/Procedures/Types/RedeemTokensParams/RedeemTokensParams.md)
- [RegisterCustomClaimTypeParams](../../../../interfaces/API/Procedures/Types/RegisterCustomClaimTypeParams/RegisterCustomClaimTypeParams.md)
- [RegisterIdentityParams](../../../../interfaces/API/Procedures/Types/RegisterIdentityParams/RegisterIdentityParams.md)
- [RemoveAssetRequirementParams](../../../../interfaces/API/Procedures/Types/RemoveAssetRequirementParams/RemoveAssetRequirementParams.md)
- [RemoveCheckpointScheduleParams](../../../../interfaces/API/Procedures/Types/RemoveCheckpointScheduleParams/RemoveCheckpointScheduleParams.md)
- [RemoveCorporateActionParams](../../../../interfaces/API/Procedures/Types/RemoveCorporateActionParams/RemoveCorporateActionParams.md)
- [RemoveExternalAgentParams](../../../../interfaces/API/Procedures/Types/RemoveExternalAgentParams/RemoveExternalAgentParams.md)
- [RemoveSecondaryAccountsParams](../../../../interfaces/API/Procedures/Types/RemoveSecondaryAccountsParams/RemoveSecondaryAccountsParams.md)
- [RenamePortfolioParams](../../../../interfaces/API/Procedures/Types/RenamePortfolioParams/RenamePortfolioParams.md)
- [ReserveTickerParams](../../../../interfaces/API/Procedures/Types/ReserveTickerParams/ReserveTickerParams.md)
- [RevokeClaimsParams](../../../../interfaces/API/Procedures/Types/RevokeClaimsParams/RevokeClaimsParams.md)
- [RotatePrimaryKeyParams](../../../../interfaces/API/Procedures/Types/RotatePrimaryKeyParams/RotatePrimaryKeyParams.md)
- [ScopeClaimProof](../../../../interfaces/API/Procedures/Types/ScopeClaimProof/ScopeClaimProof.md)
- [SetAllowanceParams](../../../../interfaces/API/Procedures/Types/SetAllowanceParams/SetAllowanceParams.md)
- [SetAssetDocumentsParams](../../../../interfaces/API/Procedures/Types/SetAssetDocumentsParams/SetAssetDocumentsParams.md)
- [SetAssetRequirementsParams](../../../../interfaces/API/Procedures/Types/SetAssetRequirementsParams/SetAssetRequirementsParams.md)
- [SetClaimCountTransferRestrictionsParams](../../../../interfaces/API/Procedures/Types/SetClaimCountTransferRestrictionsParams/SetClaimCountTransferRestrictionsParams.md)
- [SetClaimPercentageTransferRestrictionsParams](../../../../interfaces/API/Procedures/Types/SetClaimPercentageTransferRestrictionsParams/SetClaimPercentageTransferRestrictionsParams.md)
- [SetCountTransferRestrictionsParams](../../../../interfaces/API/Procedures/Types/SetCountTransferRestrictionsParams/SetCountTransferRestrictionsParams.md)
- [SetCustodianParams](../../../../interfaces/API/Procedures/Types/SetCustodianParams/SetCustodianParams.md)
- [SetGroupPermissionsParams](../../../../interfaces/API/Procedures/Types/SetGroupPermissionsParams/SetGroupPermissionsParams.md)
- [SetPercentageTransferRestrictionsParams](../../../../interfaces/API/Procedures/Types/SetPercentageTransferRestrictionsParams/SetPercentageTransferRestrictionsParams.md)
- [SetPermissionGroupParams](../../../../interfaces/API/Procedures/Types/SetPermissionGroupParams/SetPermissionGroupParams.md)
- [SubsidizeAccountParams](../../../../interfaces/API/Procedures/Types/SubsidizeAccountParams/SubsidizeAccountParams.md)
- [TickerOwnerRole](../../../../interfaces/API/Procedures/Types/TickerOwnerRole/TickerOwnerRole.md)
- [TransactionsParams](../../../../interfaces/API/Procedures/Types/TransactionsParams/TransactionsParams.md)
- [TransferAssetOwnershipParams](../../../../interfaces/API/Procedures/Types/TransferAssetOwnershipParams/TransferAssetOwnershipParams.md)
- [TransferPolyxParams](../../../../interfaces/API/Procedures/Types/TransferPolyxParams/TransferPolyxParams.md)
- [TransferTickerOwnershipParams](../../../../interfaces/API/Procedures/Types/TransferTickerOwnershipParams/TransferTickerOwnershipParams.md)
- [TxData](../../../../interfaces/API/Procedures/Types/TxData/TxData.md)
- [TxGroupParams](../../../../interfaces/API/Procedures/Types/TxGroupParams/TxGroupParams.md)
- [UnlinkChildParams](../../../../interfaces/API/Procedures/Types/UnlinkChildParams/UnlinkChildParams.md)
- [VenueOwnerRole](../../../../interfaces/API/Procedures/Types/VenueOwnerRole/VenueOwnerRole.md)
- [WaivePermissionsParams](../../../../interfaces/API/Procedures/Types/WaivePermissionsParams/WaivePermissionsParams.md)

## Type Aliases

### AddAssetStatParams

Ƭ **AddAssetStatParams**: \{ `ticker`: `string` } & [`AddCountStatParams`](Types.md#addcountstatparams) \| [`AddPercentageStatParams`](Types.md#addpercentagestatparams) \| [`AddClaimCountStatParams`](Types.md#addclaimcountstatparams) \| [`AddClaimPercentageStatParams`](Types.md#addclaimpercentagestatparams)

#### Defined in

[api/procedures/types.ts:413](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L413)

---

### AddClaimCountStatParams

Ƭ **AddClaimCountStatParams**: [`ClaimCountStatInput`](../../Entities/Types/Types.md#claimcountstatinput) & \{ `type`: [`ScopedCount`](../../../../enums/API/Entities/Types/StatType/StatType.md#scopedcount) }

#### Defined in

[api/procedures/types.ts:405](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L405)

---

### AddClaimCountTransferRestrictionParams

Ƭ **AddClaimCountTransferRestrictionParams**: [`ClaimCountTransferRestrictionInput`](../../../../interfaces/API/Procedures/Types/ClaimCountTransferRestrictionInput/ClaimCountTransferRestrictionInput.md) & \{ `type`: [`ClaimCount`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#claimcount) }

#### Defined in

[api/procedures/types.ts:525](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L525)

---

### AddClaimPercentageStatParams

Ƭ **AddClaimPercentageStatParams**: [`StatClaimIssuer`](../../../../interfaces/API/Entities/Types/StatClaimIssuer/StatClaimIssuer.md) & \{ `type`: [`ScopedBalance`](../../../../enums/API/Entities/Types/StatType/StatType.md#scopedbalance) }

#### Defined in

[api/procedures/types.ts:409](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L409)

---

### AddClaimPercentageTransferRestrictionParams

Ƭ **AddClaimPercentageTransferRestrictionParams**: [`ClaimPercentageTransferRestrictionInput`](../../../../interfaces/API/Procedures/Types/ClaimPercentageTransferRestrictionInput/ClaimPercentageTransferRestrictionInput.md) & \{ `type`: [`ClaimPercentage`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#claimpercentage) }

#### Defined in

[api/procedures/types.ts:529](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L529)

---

### AddCountStatParams

Ƭ **AddCountStatParams**: [`AddCountStatInput`](../../../../interfaces/API/Entities/Types/AddCountStatInput/AddCountStatInput.md) & \{ `type`: [`Count`](../../../../enums/API/Entities/Types/StatType/StatType.md#count) }

#### Defined in

[api/procedures/types.ts:397](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L397)

---

### AddCountTransferRestrictionParams

Ƭ **AddCountTransferRestrictionParams**: [`CountTransferRestrictionInput`](../../../../interfaces/API/Procedures/Types/CountTransferRestrictionInput/CountTransferRestrictionInput.md) & \{ `type`: [`Count`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#count) }

#### Defined in

[api/procedures/types.ts:517](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L517)

---

### AddInstructionParams

Ƭ **AddInstructionParams**: \{ `legs`: [`InstructionLeg`](Types.md#instructionleg)[] ; `mediators?`: (`string` \| [`Identity`](../../../../classes/API/Entities/Identity/Identity.md))[] ; `memo?`: `string` ; `tradeDate?`: `Date` ; `valueDate?`: `Date` } & \{ `endBlock?`: `BigNumber` } \| \{ `endAfterBlock?`: `BigNumber` }

#### Defined in

[api/procedures/types.ts:852](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L852)

---

### AddInstructionWithVenueIdParams

Ƭ **AddInstructionWithVenueIdParams**: [`AddInstructionParams`](Types.md#addinstructionparams) & \{ `venueId`: `BigNumber` }

#### Defined in

[api/procedures/types.ts:895](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L895)

---

### AddPercentageStatParams

Ƭ **AddPercentageStatParams**: `Object`

#### Type declaration

| Name   | Type                                                                           |
| :----- | :----------------------------------------------------------------------------- |
| `type` | [`Balance`](../../../../enums/API/Entities/Types/StatType/StatType.md#balance) |

#### Defined in

[api/procedures/types.ts:401](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L401)

---

### AddPercentageTransferRestrictionParams

Ƭ **AddPercentageTransferRestrictionParams**: [`PercentageTransferRestrictionInput`](../../../../interfaces/API/Procedures/Types/PercentageTransferRestrictionInput/PercentageTransferRestrictionInput.md) & \{ `type`: [`Percentage`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#percentage) }

#### Defined in

[api/procedures/types.ts:521](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L521)

---

### AddRestrictionParams

Ƭ **AddRestrictionParams**\<`T`\>: `Omit`\<`T` extends [`Count`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#count) ? [`AddCountTransferRestrictionParams`](Types.md#addcounttransferrestrictionparams) : `T` extends [`Percentage`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#percentage) ? [`AddPercentageTransferRestrictionParams`](Types.md#addpercentagetransferrestrictionparams) : `T` extends [`ClaimCount`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#claimcount) ? [`AddClaimCountTransferRestrictionParams`](Types.md#addclaimcounttransferrestrictionparams) : [`AddClaimPercentageTransferRestrictionParams`](Types.md#addclaimpercentagetransferrestrictionparams), `"type"`\>

#### Type parameters

| Name |
| :--- |
| `T`  |

#### Defined in

[api/procedures/types.ts:358](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L358)

---

### AffirmAsMediatorParams

Ƭ **AffirmAsMediatorParams**: `Object`

#### Type declaration

| Name      | Type   |
| :-------- | :----- |
| `expiry?` | `Date` |

#### Defined in

[api/procedures/types.ts:928](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L928)

---

### AffirmOrWithdrawInstructionParams

Ƭ **AffirmOrWithdrawInstructionParams**: `Object`

#### Type declaration

| Name          | Type                                                             | Description                                                                                                                                                                                                                                                            |
| :------------ | :--------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `portfolios?` | [`PortfolioLike`](../../Entities/Types/Types.md#portfoliolike)[] | (optional) Portfolios that the signer controls and wants to affirm the instruction or withdraw affirmation **`Note`** if empty, all the legs containing any custodied Portfolios of the signer will be affirmed/affirmation will be withdrawn, based on the operation. |

#### Defined in

[api/procedures/types.ts:919](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L919)

---

### AllowIdentityToCreatePortfoliosParams

Ƭ **AllowIdentityToCreatePortfoliosParams**: `Object`

#### Type declaration

| Name  | Type                                                                            |
| :---- | :------------------------------------------------------------------------------ |
| `did` | [`Identity`](../../../../classes/API/Entities/Identity/Identity.md) \| `string` |

#### Defined in

[api/procedures/types.ts:1531](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L1531)

---

### CollectionKeyInput

Ƭ **CollectionKeyInput**: [`GlobalCollectionKeyInput`](../../../../interfaces/API/Procedures/Types/GlobalCollectionKeyInput/GlobalCollectionKeyInput.md) \| [`LocalCollectionKeyInput`](../../../../interfaces/API/Procedures/Types/LocalCollectionKeyInput/LocalCollectionKeyInput.md)

Global key must be registered. local keys must provide a specification as they are created with the NftCollection

#### Defined in

[api/procedures/types.ts:665](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L665)

---

### GenericPolymeshTransaction

Ƭ **GenericPolymeshTransaction**\<`ProcedureReturnValue`, `ReturnValue`\>: [`PolymeshTransaction`](../../../../classes/Base/PolymeshTransaction/PolymeshTransaction.md)\<`ProcedureReturnValue`, `ReturnValue`\> \| [`PolymeshTransactionBatch`](../../../../classes/Base/PolymeshTransactionBatch/PolymeshTransactionBatch.md)\<`ProcedureReturnValue`, `ReturnValue`\>

#### Type parameters

| Name                   |
| :--------------------- |
| `ProcedureReturnValue` |
| `ReturnValue`          |

#### Defined in

[api/procedures/types.ts:200](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L200)

---

### GetTransferRestrictionReturnType

Ƭ **GetTransferRestrictionReturnType**\<`T`\>: [`ActiveTransferRestrictions`](../../../../interfaces/API/Entities/Types/ActiveTransferRestrictions/ActiveTransferRestrictions.md)\<`T` extends [`Count`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#count) ? [`CountTransferRestriction`](../../../../interfaces/API/Entities/Types/CountTransferRestriction/CountTransferRestriction.md) : `T` extends [`Percentage`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#percentage) ? [`PercentageTransferRestriction`](../../../../interfaces/API/Entities/Types/PercentageTransferRestriction/PercentageTransferRestriction.md) : `T` extends [`ClaimCount`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#claimcount) ? [`ClaimCountTransferRestriction`](../../../../interfaces/API/Entities/Types/ClaimCountTransferRestriction/ClaimCountTransferRestriction.md) : [`ClaimPercentageTransferRestriction`](../../../../interfaces/API/Entities/Types/ClaimPercentageTransferRestriction/ClaimPercentageTransferRestriction.md)\>

#### Type parameters

| Name |
| :--- |
| `T`  |

#### Defined in

[api/procedures/types.ts:380](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L380)

---

### InputCorporateActionTargets

Ƭ **InputCorporateActionTargets**: [`Modify`](../../../Types/Utils/Utils.md#modify) \<[`CorporateActionTargets`](../../../../interfaces/API/Entities/CorporateActionBase/Types/CorporateActionTargets/CorporateActionTargets.md), \{ `identities`: (`string` \| [`Identity`](../../../../classes/API/Entities/Identity/Identity.md))[] }\>

Targets of a corporate action in a flexible structure for input purposes

#### Defined in

[api/procedures/types.ts:183](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L183)

---

### InputCorporateActionTaxWithholdings

Ƭ **InputCorporateActionTaxWithholdings**: [`Modify`](../../../Types/Utils/Utils.md#modify) \<[`TaxWithholding`](../../../../interfaces/API/Entities/CorporateActionBase/Types/TaxWithholding/TaxWithholding.md), \{ `identity`: `string` \| [`Identity`](../../../../classes/API/Entities/Identity/Identity.md) }\>[]

Per-Identity tax withholdings of a corporate action in a flexible structure for input purposes

#### Defined in

[api/procedures/types.ts:193](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L193)

---

### InstructionLeg

Ƭ **InstructionLeg**: [`InstructionFungibleLeg`](../../../../interfaces/API/Procedures/Types/InstructionFungibleLeg/InstructionFungibleLeg.md) \| [`InstructionNftLeg`](../../../../interfaces/API/Procedures/Types/InstructionNftLeg/InstructionNftLeg.md)

#### Defined in

[api/procedures/types.ts:850](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L850)

---

### IssueNftParams

Ƭ **IssueNftParams**: `Object`

#### Type declaration

| Name         | Type                                                           |
| :----------- | :------------------------------------------------------------- |
| `metadata`   | [`NftMetadataInput`](Types.md#nftmetadatainput)[]              |
| `portfolio?` | [`PortfolioLike`](../../Entities/Types/Types.md#portfoliolike) |

#### Defined in

[api/procedures/types.ts:1028](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L1028)

---

### ModifyAssetParams

Ƭ **ModifyAssetParams**: \{ `fundingRound?`: `string` ; `identifiers?`: [`SecurityIdentifier`](../../../../interfaces/API/Entities/Asset/Types/SecurityIdentifier/SecurityIdentifier.md)[] ; `makeDivisible?`: `true` ; `name`: `string` } \| \{ `fundingRound?`: `string` ; `identifiers?`: [`SecurityIdentifier`](../../../../interfaces/API/Entities/Asset/Types/SecurityIdentifier/SecurityIdentifier.md)[] ; `makeDivisible`: `true` ; `name?`: `string` } \| \{ `fundingRound`: `string` ; `identifiers?`: [`SecurityIdentifier`](../../../../interfaces/API/Entities/Asset/Types/SecurityIdentifier/SecurityIdentifier.md)[] ; `makeDivisible?`: `true` ; `name?`: `string` } \| \{ `fundingRound?`: `string` ; `identifiers`: [`SecurityIdentifier`](../../../../interfaces/API/Entities/Asset/Types/SecurityIdentifier/SecurityIdentifier.md)[] ; `makeDivisible?`: `true` ; `name?`: `string` }

#### Defined in

[api/procedures/types.ts:993](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L993)

---

### ModifyCaDefaultConfigParams

Ƭ **ModifyCaDefaultConfigParams**: \{ `defaultTaxWithholding`: `BigNumber` ; `targets?`: [`InputTargets`](../../Entities/CorporateActionBase/Types/Types.md#inputtargets) ; `taxWithholdings?`: [`InputTaxWithholding`](../../Entities/CorporateActionBase/Types/Types.md#inputtaxwithholding)[] } \| \{ `defaultTaxWithholding?`: `BigNumber` ; `targets`: [`InputTargets`](../../Entities/CorporateActionBase/Types/Types.md#inputtargets) ; `taxWithholdings?`: [`InputTaxWithholding`](../../Entities/CorporateActionBase/Types/Types.md#inputtaxwithholding)[] } \| \{ `defaultTaxWithholding?`: `BigNumber` ; `targets?`: [`InputTargets`](../../Entities/CorporateActionBase/Types/Types.md#inputtargets) ; `taxWithholdings`: [`InputTaxWithholding`](../../Entities/CorporateActionBase/Types/Types.md#inputtaxwithholding)[] }

#### Defined in

[api/procedures/types.ts:1141](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L1141)

---

### ModifyClaimsParams

Ƭ **ModifyClaimsParams**: [`AddClaimsParams`](../../../../interfaces/API/Procedures/Types/AddClaimsParams/AddClaimsParams.md) \| [`EditClaimsParams`](../../../../interfaces/API/Procedures/Types/EditClaimsParams/EditClaimsParams.md) \| [`RevokeClaimsParams`](../../../../interfaces/API/Procedures/Types/RevokeClaimsParams/RevokeClaimsParams.md)

#### Defined in

[api/procedures/types.ts:741](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L741)

---

### ModifyComplianceRequirementParams

Ƭ **ModifyComplianceRequirementParams**: `Object`

#### Type declaration

| Name         | Type                                                               | Description                                                                                                                                                                                                                                                                 |
| :----------- | :----------------------------------------------------------------- | :-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `conditions` | [`InputCondition`](../../Entities/Types/Types.md#inputcondition)[] | array of conditions to replace the existing array of conditions for the requirement (identified by `id`). Conditions within a requirement are _AND_ between them. This means that in order for a transfer to comply with this requirement, it must fulfill _ALL_ conditions |
| `id`         | `BigNumber`                                                        | ID of the Compliance Requirement                                                                                                                                                                                                                                            |

#### Defined in

[api/procedures/types.ts:1090](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L1090)

---

### ModifyInstructionAffirmationParams

Ƭ **ModifyInstructionAffirmationParams**: [`InstructionIdParams`](../../../../interfaces/API/Procedures/Types/InstructionIdParams/InstructionIdParams.md) & \{ `operation`: [`Affirm`](../../../../enums/API/Procedures/Types/InstructionAffirmationOperation/InstructionAffirmationOperation.md#affirm) \| [`Withdraw`](../../../../enums/API/Procedures/Types/InstructionAffirmationOperation/InstructionAffirmationOperation.md#withdraw) } & [`AffirmOrWithdrawInstructionParams`](Types.md#affirmorwithdrawinstructionparams) \| \{ `operation`: [`Reject`](../../../../enums/API/Procedures/Types/InstructionAffirmationOperation/InstructionAffirmationOperation.md#reject) \| [`RejectAsMediator`](../../../../enums/API/Procedures/Types/InstructionAffirmationOperation/InstructionAffirmationOperation.md#rejectasmediator) } & [`RejectInstructionParams`](Types.md#rejectinstructionparams) \| \{ `operation`: [`AffirmAsMediator`](../../../../enums/API/Procedures/Types/InstructionAffirmationOperation/InstructionAffirmationOperation.md#affirmasmediator) } & [`AffirmAsMediatorParams`](Types.md#affirmasmediatorparams) \| \{ `operation`: [`WithdrawAsMediator`](../../../../enums/API/Procedures/Types/InstructionAffirmationOperation/InstructionAffirmationOperation.md#withdrawasmediator) \| [`RejectAsMediator`](../../../../enums/API/Procedures/Types/InstructionAffirmationOperation/InstructionAffirmationOperation.md#rejectasmediator) }

#### Defined in

[api/procedures/types.ts:932](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L932)

---

### ModifyOfferingTimesParams

Ƭ **ModifyOfferingTimesParams**: \{ `end`: `Date` \| `null` ; `start?`: `Date` } \| \{ `end?`: `Date` \| `null` ; `start`: `Date` } \| \{ `end`: `Date` \| `null` ; `start`: `Date` }

#### Defined in

[api/procedures/types.ts:1364](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L1364)

---

### ModifyVenueParams

Ƭ **ModifyVenueParams**: \{ `description?`: `string` ; `type`: [`VenueType`](../../../../enums/API/Entities/Venue/Types/VenueType/VenueType.md) } \| \{ `description`: `string` ; `type?`: [`VenueType`](../../../../enums/API/Entities/Venue/Types/VenueType/VenueType.md) } \| \{ `description`: `string` ; `type`: [`VenueType`](../../../../enums/API/Entities/Venue/Types/VenueType/VenueType.md) }

#### Defined in

[api/procedures/types.ts:1312](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L1312)

---

### MortalityProcedureOpt

Ƭ **MortalityProcedureOpt**: [`ImmortalProcedureOptValue`](../../../../interfaces/API/Procedures/Types/ImmortalProcedureOptValue/ImmortalProcedureOptValue.md) \| [`MortalProcedureOptValue`](../../../../interfaces/API/Procedures/Types/MortalProcedureOptValue/MortalProcedureOptValue.md)

#### Defined in

[api/procedures/types.ts:134](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L134)

---

### NftMetadataInput

Ƭ **NftMetadataInput**: `Object`

#### Type declaration

| Name    | Type                                                                                              |
| :------ | :------------------------------------------------------------------------------------------------ |
| `id`    | `BigNumber`                                                                                       |
| `type`  | [`MetadataType`](../../../../enums/API/Entities/MetadataEntry/Types/MetadataType/MetadataType.md) |
| `value` | `string`                                                                                          |

#### Defined in

[api/procedures/types.ts:1022](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L1022)

---

### RegisterMetadataParams

Ƭ **RegisterMetadataParams**: \{ `name`: `string` ; `specs`: [`MetadataSpec`](../../../../interfaces/API/Entities/MetadataEntry/Types/MetadataSpec/MetadataSpec.md) } \| \{ `details?`: [`MetadataValueDetails`](../../Entities/MetadataEntry/Types/Types.md#metadatavaluedetails) ; `name`: `string` ; `specs`: [`MetadataSpec`](../../../../interfaces/API/Entities/MetadataEntry/Types/MetadataSpec/MetadataSpec.md) ; `value`: `string` }

#### Defined in

[api/procedures/types.ts:1483](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L1483)

---

### RejectInstructionParams

Ƭ **RejectInstructionParams**: `Object`

#### Type declaration

| Name         | Type                                                           | Description                                                                       |
| :----------- | :------------------------------------------------------------- | :-------------------------------------------------------------------------------- |
| `portfolio?` | [`PortfolioLike`](../../Entities/Types/Types.md#portfoliolike) | (optional) Portfolio that the signer controls and wants to reject the instruction |

#### Defined in

[api/procedures/types.ts:912](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L912)

---

### RemoveAssetStatParams

Ƭ **RemoveAssetStatParams**: \{ `ticker`: `string` } & [`RemoveCountStatParams`](Types.md#removecountstatparams) \| [`RemoveBalanceStatParams`](Types.md#removebalancestatparams) \| [`RemoveScopedCountParams`](Types.md#removescopedcountparams) \| [`RemoveScopedBalanceParams`](Types.md#removescopedbalanceparams)

#### Defined in

[api/procedures/types.ts:390](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L390)

---

### RemoveBalanceStatParams

Ƭ **RemoveBalanceStatParams**: `Object`

#### Type declaration

| Name   | Type                                                                           |
| :----- | :----------------------------------------------------------------------------- |
| `type` | [`Balance`](../../../../enums/API/Entities/Types/StatType/StatType.md#balance) |

#### Defined in

[api/procedures/types.ts:424](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L424)

---

### RemoveCountStatParams

Ƭ **RemoveCountStatParams**: `Object`

#### Type declaration

| Name   | Type                                                                       |
| :----- | :------------------------------------------------------------------------- |
| `type` | [`Count`](../../../../enums/API/Entities/Types/StatType/StatType.md#count) |

#### Defined in

[api/procedures/types.ts:420](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L420)

---

### RemoveScopedBalanceParams

Ƭ **RemoveScopedBalanceParams**: [`StatClaimIssuer`](../../../../interfaces/API/Entities/Types/StatClaimIssuer/StatClaimIssuer.md) & \{ `type`: [`ScopedBalance`](../../../../enums/API/Entities/Types/StatType/StatType.md#scopedbalance) }

#### Defined in

[api/procedures/types.ts:432](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L432)

---

### RemoveScopedCountParams

Ƭ **RemoveScopedCountParams**: [`StatClaimIssuer`](../../../../interfaces/API/Entities/Types/StatClaimIssuer/StatClaimIssuer.md) & \{ `type`: [`ScopedCount`](../../../../enums/API/Entities/Types/StatType/StatType.md#scopedcount) }

#### Defined in

[api/procedures/types.ts:428](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L428)

---

### RevokeIdentityToCreatePortfoliosParams

Ƭ **RevokeIdentityToCreatePortfoliosParams**: `Object`

#### Type declaration

| Name  | Type                                                                            |
| :---- | :------------------------------------------------------------------------------ |
| `did` | [`Identity`](../../../../classes/API/Entities/Identity/Identity.md) \| `string` |

#### Defined in

[api/procedures/types.ts:1535](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L1535)

---

### Role

Ƭ **Role**: [`TickerOwnerRole`](../../../../interfaces/API/Procedures/Types/TickerOwnerRole/TickerOwnerRole.md) \| [`CddProviderRole`](../../../../interfaces/API/Procedures/Types/CddProviderRole/CddProviderRole.md) \| [`VenueOwnerRole`](../../../../interfaces/API/Procedures/Types/VenueOwnerRole/VenueOwnerRole.md) \| [`PortfolioCustodianRole`](../../../../interfaces/API/Procedures/Types/PortfolioCustodianRole/PortfolioCustodianRole.md) \| [`IdentityRole`](../../../../interfaces/API/Procedures/Types/IdentityRole/IdentityRole.md)

#### Defined in

[api/procedures/types.ts:265](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L265)

---

### RotatePrimaryKeyToSecondaryParams

Ƭ **RotatePrimaryKeyToSecondaryParams**: `Object`

#### Type declaration

| Name            | Type                                                                         | Description                                                                                                                              |
| :-------------- | :--------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------------------------------------------- |
| `expiry?`       | `Date`                                                                       | (optional) when the generated authorization should expire                                                                                |
| `permissions`   | [`PermissionsLike`](../../Entities/Types/Types.md#permissionslike)           | -                                                                                                                                        |
| `targetAccount` | `string` \| [`Account`](../../../../classes/API/Entities/Account/Account.md) | The Account that should function as the primary key of the newly created Identity. Can be ss58 encoded address or an instance of Account |

#### Defined in

[api/procedures/types.ts:809](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L809)

---

### SetAssetStatParams

Ƭ **SetAssetStatParams**\<`T`\>: `Omit`\<`T` extends [`Count`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#count) ? [`AddCountStatParams`](Types.md#addcountstatparams) : `T` extends [`Percentage`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#percentage) ? [`AddPercentageStatParams`](Types.md#addpercentagestatparams) : `T` extends [`ClaimCount`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#claimcount) ? [`AddClaimCountStatParams`](Types.md#addclaimcountstatparams) : [`AddClaimPercentageStatParams`](Types.md#addclaimpercentagestatparams), `"type"`\>

#### Type parameters

| Name |
| :--- |
| `T`  |

#### Defined in

[api/procedures/types.ts:436](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L436)

---

### SetMetadataParams

Ƭ **SetMetadataParams**: \{ `details?`: [`MetadataValueDetails`](../../Entities/MetadataEntry/Types/Types.md#metadatavaluedetails) ; `value`: `string` } \| \{ `details`: [`MetadataValueDetails`](../../Entities/MetadataEntry/Types/Types.md#metadatavaluedetails) }

#### Defined in

[api/procedures/types.ts:1479](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L1479)

---

### SetRestrictionsParams

Ƭ **SetRestrictionsParams**\<`T`\>: `Omit`\<`T` extends [`Count`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#count) ? [`SetCountTransferRestrictionsParams`](../../../../interfaces/API/Procedures/Types/SetCountTransferRestrictionsParams/SetCountTransferRestrictionsParams.md) : `T` extends [`Percentage`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#percentage) ? [`SetPercentageTransferRestrictionsParams`](../../../../interfaces/API/Procedures/Types/SetPercentageTransferRestrictionsParams/SetPercentageTransferRestrictionsParams.md) : `T` extends [`ClaimCount`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#claimcount) ? [`SetClaimCountTransferRestrictionsParams`](../../../../interfaces/API/Procedures/Types/SetClaimCountTransferRestrictionsParams/SetClaimCountTransferRestrictionsParams.md) : [`SetClaimPercentageTransferRestrictionsParams`](../../../../interfaces/API/Procedures/Types/SetClaimPercentageTransferRestrictionsParams/SetClaimPercentageTransferRestrictionsParams.md), `"type"`\>

#### Type parameters

| Name |
| :--- |
| `T`  |

#### Defined in

[api/procedures/types.ts:369](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L369)

---

### SetVenueFilteringParams

Ƭ **SetVenueFilteringParams**: `Object`

#### Type declaration

| Name                | Type          |
| :------------------ | :------------ |
| `allowedVenues?`    | `BigNumber`[] |
| `disallowedVenues?` | `BigNumber`[] |
| `enabled?`          | `boolean`     |

#### Defined in

[api/procedures/types.ts:1495](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L1495)

---

### TransactionArray

Ƭ **TransactionArray**\<`ReturnValues`\>: \{ [K in keyof ReturnValues]: GenericPolymeshTransaction\<any, ReturnValues[K]\> }

#### Type parameters

| Name           | Type                            |
| :------------- | :------------------------------ |
| `ReturnValues` | extends readonly [...unknown[]] |

#### Defined in

[api/procedures/types.ts:204](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L204)

---

### TransferRestriction

Ƭ **TransferRestriction**: \{ `type`: [`Count`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#count) ; `value`: `BigNumber` } \| \{ `type`: [`Percentage`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#percentage) ; `value`: `BigNumber` } \| \{ `type`: [`ClaimCount`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#claimcount) ; `value`: [`ClaimCountRestrictionValue`](../../../../interfaces/API/Procedures/Types/ClaimCountRestrictionValue/ClaimCountRestrictionValue.md) } \| \{ `type`: [`ClaimPercentage`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#claimpercentage) ; `value`: [`ClaimPercentageRestrictionValue`](../../../../interfaces/API/Procedures/Types/ClaimPercentageRestrictionValue/ClaimPercentageRestrictionValue.md) }

#### Defined in

[api/procedures/types.ts:468](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fedc4714f/src/api/procedures/types.ts#L468)
